grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      seq(
        choice(
          $.definition_statement,
          $.manipulation_statement,
          $.migration_statement,
          $.system_statement,
          $.batch_statement,
          $.transaction_statement,
        ),
        ";",
      ),

    // ==========================================
    // 1. Schema Definitions (DDL)
    // ==========================================

    batch_statement: ($) =>
      seq("BATCH", "{", repeat($._statement), "}", optional($.return_clause)),

    isolation_level: ($) =>
      choice(
        "READ UNCOMMITTED",
        "READ COMMITTED",
        "REPEATABLE READ",
        "SERIALIZABLE",
        "READ_UNCOMMITTED",
        "READ_COMMITTED",
        "REPEATABLE_READ",
      ),

    // ==========================================
    // 3. Query / Manipulation (DML)
    // ==========================================

    manipulation_statement: ($) => repeat1($._clause),

    _clause: ($) =>
      choice(
        $.import_clause,
        $.match_clause,
        $.match_path_clause,
        $.optional_match_clause,
        $.create_node_clause,
        $.create_edge_clause,
        $.merge_clause,
        $.merge_object_clause,
        $.set_clause,
        $.delete_clause,
        $.detach_delete_clause,
        $.remove_clause,
        $.with_clause,
        $.where_clause,
        $.return_clause,
        $.order_by_clause,
        $.limit_clause,
        $.skip_clause,
        $.group_by_clause,
        $.union_clause,
        $.unwind_clause,
      ),

    match_clause: ($) =>
      seq(
        "MATCH",
        $.pattern,
        optional("CROSS_TYPE"),
        optional($.use_index_hint),
      ),

    match_path_clause: ($) =>
      seq("MATCH", "PATH", field("path_var", $.identifier), "=", $.pattern),

    _weight_clause: ($) =>
      seq(
        "WEIGHT",
        "BY",
        field("weight_field", $.identifier),
        optional(seq("USING", choice("SUM", "MAX", "MIN", "AVG"))),
      ),

    create_node_clause: ($) =>
      seq(
        "CREATE",
        "NODE",
        field("variable", $.identifier),
        ":",
        field("type", $.dotted_identifier),
        $.map_literal,
      ),

    create_edge_clause: ($) =>
      seq(
        "CREATE",
        "EDGE",
        field("variable", $.identifier),
        ":",
        field("type", $.dotted_identifier),
        "{",
        commaSepTrailing(choice($.property_assignment, $.role_binding)),
        "}",
      ),

    merge_clause: ($) =>
      seq(
        "MERGE",
        "(",
        field("variable", $.identifier),
        ":",
        field("type", $.dotted_identifier),
        "{",
        commaSepTrailing(choice($.property_assignment, $.role_binding)),
        "}",
        ")",
        repeat($.on_action),
      ),

    on_action: ($) =>
      seq(
        "ON",
        choice("CREATE", "MATCH"),
        "SET",
        commaSep1($.assignment_expression),
      ),

    set_clause: ($) =>
      seq(
        "SET",
        commaSep1(
          choice(
            $.assignment_expression,
            $.atomic_append,
            $.atomic_remove,
            seq($.identifier, "+=", $.map_literal),
          ),
        ),
      ),

    where_clause: ($) => seq("WHERE", $._expression),

    order_by_clause: ($) =>
      seq(
        "ORDER",
        "BY",
        commaSep1(seq($._expression, optional(choice("ASC", "DESC")))),
      ),

    limit_clause: ($) => seq("LIMIT", $._expression),
    return_clause: ($) =>
      seq("RETURN", optional("DISTINCT"), commaSep1($._projection_element)),

    pattern: ($) => commaSep1($.path_pattern),

    path_pattern: ($) =>
      seq($.node_pattern, repeat(seq($.edge_pattern, $.node_pattern))),

    node_pattern: ($) =>
      seq(
        "(",
        optional(field("variable", $.identifier)),
        optional(seq(":", field("type", $.dotted_identifier))),
        optional(
          seq(
            "{",
            commaSepTrailing(choice($.property_assignment, $.role_binding)),
            "}",
          ),
        ),
        ")",
      ),

    edge_pattern: ($) =>
      seq(
        choice("-", "<-"),
        "[",
        optional(field("variable", $.identifier)),
        optional(seq(":", field("type", $.dotted_identifier))),
        optional(seq("*", optional($.range_literal))),
        optional(
          seq(
            "{",
            commaSepTrailing(choice($.property_assignment, $.role_binding)),
            "}",
          ),
        ),
        optional($._weight_clause),
        "]",
        choice("-", "->"),
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.variable,
        $._literal,
        $.function_call,
        $.list_predicate,
        $.property_access,
        $.binary_expression,
        $.unary_expression,
        $.postfix_expression,
        $.case_expression,
        $.match_expression,
        $.subquery_expression,
        $.window_function,
        seq("(", $._expression, ")"),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(12, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(14, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.left(
          10,
          seq($._expression, choice("<", ">", "<=", ">="), $._expression),
        ),
        prec.left(15, seq($._expression, "??", $._expression)),
        prec.left(
          8,
          seq(
            $._expression,
            choice(
              "==",
              "=",
              "!=",
              "IS",
              "LIKE",
              "ILIKE",
              "MATCHES",
              "IMATCHES",
            ),
            $._expression,
          ),
        ),
        prec.left(6, seq($._expression, choice("&&", "AND"), $._expression)),
        prec.left(4, seq($._expression, choice("||", "OR"), $._expression)),
        prec.left(7, seq($._expression, "IN", $._expression)),
      ),

    property_assignment: ($) =>
      seq($.identifier, choice(":", "="), $._expression),

    assignment_expression: ($) => prec(15, seq($.property_access, "=", $._expression)),

    atomic_append: ($) => seq($.property_access, "+=", $._expression),
    atomic_remove: ($) => seq($.property_access, "-=", $._expression),

    property_access: ($) =>
      prec.left(
        20,
        seq(
          field("object", $._expression),
          repeat1(seq(choice(".", "?."), field("property", $.identifier))),
        ),
      ),

    function_call: ($) =>
      prec(
        18,
        seq(
          field("name", $.identifier),
          "(",
          commaSepTrailing(choice($._expression, "*")),
          ")",
        ),
      ),

    window_function: ($) =>
      seq(
        $.function_call,
        "OVER",
        "(",
        optional(seq("PARTITION", "BY", commaSep1($._expression))),
        optional(
          seq(
            "ORDER",
            "BY",
            commaSep1(seq($._expression, optional(choice("ASC", "DESC")))),
          )
        ),
        optional($.window_frame),
        ")",
      ),

    subquery_expression: ($) =>
      seq(choice("EXISTS", "IN", "NOT EXISTS"), "(", $.manipulation_statement, ")"),

    _projection_element: ($) =>
      seq(
        choice(
          seq($.identifier, "{", commaSepTrailing($.identifier), "}"),
          $._expression,
        ),
        optional(seq("AS", $.identifier)),
      ),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence),
        ),
        '"',
      ),

    integer_literal: ($) =>
      token(
        choice(
          /[0-9]+(_[0-9]+)*/,
          /0[xX][0-9a-fA-F]+(_[0-9a-fA-F]+)*/,
          /0[bB][01]+(_[01]+)*/,
          /0[oO][0-7]+(_[0-7]+)*/,
        ),
      ),

    float_literal: ($) =>
      token(
        choice(
          /[0-9]+(_[0-9]+)*\.[0-9]+(_[0-9]+)*([eE][+-]?[0-9]+(_[0-9]+)*)?/,
          /[0-9]+(_[0-9]+)*[eE][+-]?[0-9]+(_[0-9]+)*/,
        ),
      ),

    boolean_literal: ($) => choice("true", "false"),
    variable: ($) => seq("$", $.identifier),

    map_literal: ($) =>
      seq(
        "{",
        commaSepTrailing(choice($.property_assignment, $.role_binding)),
        "}",
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
